--- a/src/projectDatabase.json
+++ b/src/projectDatabase.json
@@ -70,8 +70,8 @@
         ],
         "content": "It is a Online Shopping Cart Simulation Website. User can simulate the process of select products and add to cart like a real online shopping cart website",
         "description": "Idea from The Odin Project",
-        "github": "https://github.com/CarmenChanKaYing/Odin-Shopping-Cart",
-        "demo": "https://carmenchankaying.github.io/Odin-Shopping-Cart/#/",
+        "github": "https://github.com/CarmenChanCKY/Odin-Shopping-Cart",
+        "demo": "https://carmenchancky.github.io/Odin-Shopping-Cart/#/",
         "slug": "shopping-cart-website"
     },
     {
@@ -114,8 +114,8 @@
             "jQuery"
         ],
         "content": "It is a website battleship game. User can set the size of the sea and the amount for each type of ships. If they don't know the rule of battleship, they can read the guideline in rule page. Before start playing, the user needs to set the ships inside their sea and then compete with computer UI. The game will continue until either all the ships inside player's sea or all the ships inside UI's sea destroyed.",
-        "github": "https://github.com/CarmenChanKaYing/SimpleBattleShipGame",
-        "demo": "https://carmenchankaying.github.io/SimpleBattleShipGame/index.html",
+        "github": "https://github.com/CarmenChanCKY/SimpleBattleShipGame",
+        "demo": "https://carmenchancky.github.io/SimpleBattleShipGame/",
         "slug": "battleship-game-play"
     },
     {
@@ -169,7 +169,7 @@
         ],
         "content": "It is a learning platform for students to learn the concept of sorting algorithm. User needs to register an account to use this platform. In this platform, the user is expected to understand the concept of insertion sort, selection sort, and bubble sort. Video, algorithm, time complexity and example of each type of sorting algorithm are provided. There is one exercise for each type of sorting method. Each exercise contains three levels of the question. After answer the questions, the result will be recorded and show on the profile page.",
         "description": "Assignment of COMP3421 Web Application Design and Development - PolyU",
-        "github": "https://github.com/CarmenChanKaYing/SortingAlgorithmLearningPlatform",
+        "github": "https://github.com/CarmenChanCKY/SortingAlgorithmLearningPlatform",
         "slug": "sorting-algorithm-learning-platform"
     }
 ]
